[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "databricks-marimo-executor"
dynamic = ["version"]
description = "Execute marimo notebooks on Databricks clusters"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "jupyter-databricks-kernel>=1.0.0",
    "marimo>=0.18.0",
]

[project.entry-points."marimo.cell.executor"]
databricks = "databricks_marimo_executor:MarimoExecutor"

[dependency-groups]
dev = [
    "mypy>=1.0.0",
    "pytest-cov>=4.0.0",
    "pytest>=7.0.0",
    "ruff>=0.14.0",
]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/databricks_marimo_executor/_version.py"

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # Pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "S",    # flake8-bandit (security)
    "PERF", # Perflint
]
ignore = [
    "S101",  # assert is fine in tests
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101"]

[tool.ruff.lint.isort]
known-first-party = ["databricks_marimo_executor"]

[tool.mypy]
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
pythonpath = ["src"]
markers = [
    "integration: marks tests as integration tests (require real Databricks cluster)",
]
